--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -646,14 +646,36 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 2. Look up to - respect
 3. Look over - review
 4. Look through - flipping through
-5. Look in - check on
-6. Looking through magazines you are flipping through the pages of the magazines. 
-7. Look on - watch without getting involved.
-8. Look away - To turn one's face away (from someone or something);
-9. Look back - remember also can say look back on reminisce
-10. Look into - investigate
-11. Look forward to - get excited about
-12. Look ahead - **look ahead in advance** British English. Future 
+   - Looking through magazines you are flipping through the pages of the magazines. 
+5. Look in - check on - short visit
+6. Look on - watch without getting involved - наблюдать
+7. Look away - To turn one's face away (from someone or something);
+8. Look back - remember also can say look back on reminisce
+9. Look into - investigate
+10. Look forward to - get excited about
+11. Look ahead - **look ahead in advance** British English. Future 
+12. Look out - be careful
+13. Look for - search
+14. Look after
+
+
+
+## Look 23/12/2019
+
+1. I didn't remember the word "impromptu" and I looked up it into dictionary.
+2. Everyone looks up to Nick, because he does his work the best.
+3. Could you look over my essay? I suppose It has mistakes.
+4. I looked through Nick's report about last month selling, it looks good.
+5. How often do you look in your grandmother, she asked about you the last time I was.
+6. Nick looks on the sunset on the beach.
+7. Nick's just looked away and John was lost in the crowd.
+8. Nick likes to look back when he was a child.
+9. The police should investigate into this accident.
+10. I am looking forward to seeing you on Tuesday.
+11. Nick was looking for John in the crowd.
+12. Look out. The tree might be fallen.
+13. Could you look after my dog?
+14. I'll look ahead and try to fix up this meeting.
 
 
 
@@ -697,7 +719,116 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
     
 
+**Exercise 3**
 
+Q1 - Some people came to look ...... the house, but I don't think they'll buy it.
+
+- **Over**
+
+- into
+
+- after
+
+Q2 - Could you look ...... on my grandma and just check that everything's OK?
+
+- up
+- **in**
+- out
+
+Q3 - "Look ........- that chair's going to fall over!"
+
+- over
+- **out**
+- round
+
+Q4 - I had to look ....... my neighbor's dog while she was away for the holidays.
+
+- into
+
+- **after**
+
+- up
+
+Q5 - If you need a synonym for a word, look it .... in a thesaurus,
+
+- after
+
+- **up**
+
+- at
+
+Q6 - She promised them that she would look ........ the matter and find out what had gone wrong
+
+- at
+- to
+- **into**
+
+Q7- The Investigation Committee was set up to look ....... the cause of the plane crash.
+
+- **into**
+- up
+
+Q8 - I'm really looking ....... to Saturday because I can spend all day cleaning my house.
+
+- up
+- **Forward** - (sleep in late sleep deprived slept too much overslept groggy sleep off)
+- down on
+
+Q9 - Customs stopped me and said I looked suspicious and looked ........ all my luggage
+
+- on
+- **through**
+- into
+
+Q10- Could you look ....... my fish in my office while I am on vacation?
+
+- **after**
+
+- into
+
+- up
+
+Q11- I look ....... on my childhood as the happiest part of my life
+
+- round
+- through
+- **back**
+
+Q12-When the nurse gave me my **flu shot,** I had to ______ _____. She was very busy and stabbed my arm aggressively.
+
+- Look down
+- Look in
+- **Look away**
+
+
+
+**Exercise 4**
+
+1. We will have to **look over** all the proposals before coming to any decision.
+
+2. I **looked away** as the doctor peeled the bandage off my arm. 
+
+3. We can **look up** the restaurant’s address on the Internet.
+
+4. Can you have a look over this report before I hand it to the boss please?
+
+5. __Look _out___! There is broken glass on the floor! Be careful!
+
+6. Could you **look up** the French word for Wednesday so I can let my friend know I will arrive in Paris on that day.
+
+7. We were able to **get by** on just 3 hours of sleep per night. (Survive)
+
+8. Please ask Donnie to **get out**. He's really bothering me. leave
+
+9. It took me 3 weeks to **get over** that nasty cold.
+
+10. I wish my children could all **get along**. They are always fighting.
+
+11. What time did you **get back** from the movies last night? I didn’t hear you **get in**. enter the house
+
+12. The thieves **got away** with several expensive pieces of jewelry.
+
+    
 
 ## TODO -> GET 
 
@@ -928,13 +1059,13 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
 2. Do you take ... your mother or father?
 
-   - <u>after</u>
+   - **<u>after</u>**
    - in
    - for
 
 3. The plane couldn't take ... because of the heavy snowfall.
 
-   - <u>off</u>
+   - <u>**off**</u>
 
    - up
 
@@ -943,57 +1074,57 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 4. He took ... swimming when his doctor told him he needed to get more exercise.
 
    - after
-   - <u>up</u>
+   - <u>**up**</u>
    - in
 
 5. You should take ... Christmas decorations on the 6th of January.
    - up
    - to
-   - <u>down</u>
+   - <u>**down**</u>
 6. He took ... everything the lecturer said in his notebook.
    - up
-   - <u>down</u>
+   - <u>**down**</u>
    - on
 
 7. He spoke too quickly for us to take ... everything he said.
-   - <u>in</u>
+   - <u>**in**</u>
    - on
    - to
 
 8. Can you take this phone number ... for me, please?
    - up
    - in
-   - <u>down</u>
+   - <u>**down**</u>
 
 9. They took the company ... when it went bankrupt
    1. in
    2. down
-   3. over
+   3. **over**
 
 10. I took my hat ... when I entered the building.
-    - <u>off</u>
+    - <u>**off**</u>
     - on
     - in
 
 11. She took her clothes ... and went to bed when she got home from work.
-    - <u>off</u>
+    - <u>**off**</u>
     - on
     - down
 
 12. He refused to take ... what he had said even though he knew he was wrong
     - in
-    - <u>back</u>
+    - <u>**back**</u>
     - off
 
 13. She took a lodger/rental person ... to help pay the rent.
-    - <u>on</u>
+    - on
     - down
-    - in
+    - **in**
 
 14. I couldn't put the radio back together after I had taken it ... .
     - off
-    - <u>out on</u>
-    - apart
+    - out on
+    - **apart**
 
 **Exercise 2**
 
@@ -1271,7 +1402,37 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 
 
 
+## Home Work 19/12/2019
 
+- look over the house
+
+- look in (on) - (short visit)
+
+  - check on
+
+- sleep derprived
+
+- oversleep - sleep to much
+
+- groggy
+
+- sleep off - something wrong
+
+- flu shot
+
+- look away - turn head
+
+- look over - check
+
+- look out - be carefull
+
+- hand out distribute
+
+- carry out - excecute
+
+- plug in - connect to electricity
+
+  
 
 
 
@@ -1316,6 +1477,7 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 
 # Pronunciation
 
+- Address - [Address]
 - Get over -> not аве -> ове TODO
 - Lamborghini - [Ламборгини] - если после "g" стоит "h", то оно читается как "Г".
   - Lamborghini Urus is the world's first Super Sport Utility Vehicle
