--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -645,6 +645,7 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 1. Look up - to try to find a particular piece of information by looking in a book or on a list, or by using a computer
 2. Look up to - respect
 3. Look over - review
+   - look over the house
 4. Look through - flipping through
    - Looking through magazines you are flipping through the pages of the magazines. 
 5. Look in - check on - short visit
@@ -657,25 +658,6 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 12. Look out - be careful
 13. Look for - search
 14. Look after
-
-
-
-## Look 23/12/2019
-
-1. I didn't remember the word "impromptu" and I looked up it into dictionary.
-2. Everyone looks up to Nick, because he does his work the best.
-3. Could you look over my essay? I suppose It has mistakes.
-4. I looked through Nick's report about last month selling, it looks good.
-5. How often do you look in your grandmother, she asked about you the last time I was.
-6. Nick looks on the sunset on the beach.
-7. Nick's just looked away and John was lost in the crowd.
-8. Nick likes to look back when he was a child.
-9. The police should investigate into this accident.
-10. I am looking forward to seeing you on Tuesday.
-11. Nick was looking for John in the crowd.
-12. Look out. The tree might be fallen.
-13. Could you look after my dog?
-14. I'll look ahead and try to fix up this meeting.
 
 
 
@@ -816,19 +798,8 @@ Q12-When the nurse gave me my **flu shot,** I had to ______ _____. She was very 
 
 6. Could you **look up** the French word for Wednesday so I can let my friend know I will arrive in Paris on that day.
 
-7. We were able to **get by** on just 3 hours of sleep per night. (Survive)
+   
 
-8. Please ask Donnie to **get out**. He's really bothering me. leave
-
-9. It took me 3 weeks to **get over** that nasty cold.
-
-10. I wish my children could all **get along**. They are always fighting.
-
-11. What time did you **get back** from the movies last night? I didn’t hear you **get in**. enter the house
-
-12. The thieves **got away** with several expensive pieces of jewelry.
-
-    
 
 ## TODO -> GET 
 
@@ -838,18 +809,21 @@ Q12-When the nurse gave me my **flu shot,** I had to ______ _____. She was very 
 3. Get by - Выживать
 4. Get into - Залезть в (машину)
 5. Get out of - Вылезти из (машины)
-6. Get at - Намекать
-7. Get back at - Отомстить кому-то
-8. Get along - Ладить с кем-то
-9. Get on (with) - Ладить с кем-то
-10. Get across -> Донести идею до слушателя// Понимать **TODO**
-11. Get over - Оправиться от чего-либо, пережить
-12. Get on - Зайти в автобуса
-13. Get off - Выйти из автобуса
-14. Get away (context -> bad, crime) - Выходить сухим из воды
+5. Get at
+   - reach or gain access to (something)
+   - imply (something) - Намекать
+6. Get back at - Отомстить кому-то
+7. Get along - Ладить с кем-то
+8. Get on (with) - Ладить с кем-то
+9. Get across -> Донести идею до слушателя// Понимать **TODO**
+10. Get over - Оправиться от чего-либо, пережить
+11. Get on - Зайти в автобуса
+12. Get off - Выйти из автобуса
+13. Get away (context -> bad, crime) - Выходить сухим из воды
 14. Get out of  (context -> not bad, responsibility) - Избегать чего-то
 15. Get up - Вставать
-16. Get around - ?? lazy ... Путешествовать **TODO**
+16. Get around
+    - Находить легкий путь, без проблем
 
 
 
@@ -977,6 +951,22 @@ Q12-When the nurse gave me my **flu shot,** I had to ______ _____. She was very 
 
 
 
+**Exercise 3**
+
+1. We were able to **get by** on just 3 hours of sleep per night. (Survive)
+
+2. Please ask Donnie to **get out**. He's really bothering me. leave
+
+3. It took me 3 weeks to **get over** that nasty cold.
+
+4. I wish my children could all **get along**. They are always fighting.
+
+5. What time did you **get back** from the movies last night? I didn’t hear you **get in**. enter the house
+
+6. The thieves **got away** with several expensive pieces of jewelry.
+
+   
+
 ## TODO -> TAKE
 
 
@@ -996,17 +986,13 @@ Q12-When the nurse gave me my **flu shot,** I had to ______ _____. She was very 
    2. to invite someone to dinner, or to any place of entertainment
    3. to clean (strain, mark, dirt)
 
-3. **Take down**
-   
-1. to take notes, to write something down
-   
 4. **Take up**
    1. to occupy space or time 
    2. to become interested in something, to take up a hobby
 
 5. **Take back** 
    
-1. to apologize
+   - to apologize
    
 6. **Take in** 
 
@@ -1399,40 +1385,6 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 
 1. I know. Some protesters were hanging ??? (out) leaflets about it.
 2. Hold on a minute. I thought I heard someone call ??? (out-> loud)
-
-
-
-## Home Work 19/12/2019
-
-- look over the house
-
-- look in (on) - (short visit)
-
-  - check on
-
-- sleep derprived
-
-- oversleep - sleep to much
-
-- groggy
-
-- sleep off - something wrong
-
-- flu shot
-
-- look away - turn head
-
-- look over - check
-
-- look out - be carefull
-
-- hand out distribute
-
-- carry out - excecute
-
-- plug in - connect to electricity
-
-  
 
 
 
