--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -420,6 +420,14 @@ Must
 
 # ARTICLES - CONTEXT - Small talks
 
+## Not understanding -> CHECK
+
+- How is it pronounced?
+- What is that?
+- What does it mean?
+- how is it spelt?
+- how is it written?
+
 ## General
 
 - Share with us
@@ -1202,6 +1210,72 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
 ## TODO -> UP
 
+1. **Go up / come up / walk up (to ...)** - Подходить
+
+   - A man **came up to** me in the street and asked me for money.
+
+2. **Catch up** (**with** somebody) - Догонять
+
+   - I’m not ready to go yet. You go on and I'll **catch up with** you / I'll **catch you up**
+
+3. **Keep up** (**with** somebody) - Продолжать
+
+   - You're walking too fast. I can't **keep up** (**with** you).
+
+4. **Set up** - Начинать
+
+   - The government has **set up** a committee to investigate the problem.
+
+5. **Take up** - Начинать что-то делать (часто о хобби)
+
+   - Laura **took up** photography a few years ago. She takes really good pictures.
+
+6. **Fix up**
+
+   - We've **fixed up** a meeting for next Monday.
+
+7. **Grow up**
+
+   - Ann was born in Hong Kong but **grew up** in Australia.
+
+8. **Bring up**
+
+   - Her parents died when she was a child and she was **brought up** by her grandparents.
+
+9. **Clean up / clear up / tidy up**
+
+   - Look at this mess! Who's going to **tidy up**?
+
+10. **Wash up**
+
+    - I hate **washing up**.
+
+11. **End up** - дело закончилось
+
+    - There was a fight in the street and three men **ended up** in hospital.
+
+12. **Give up**
+
+    - Don't **give up**. Keep trying!
+
+13. **Make up**
+
+    - Air is **made up** mainly of nitrogen and oxygen
+
+14. **Take up**
+
+    - Most of the space in the room was **taken up** by a large table.
+
+15. **Turn up / show up**
+
+    - We arranged to meet David last night, but he didn't turn up
+
+16. **Use** something **up** = use all of it so that nothing is left
+
+    - I'm going to make some soup. We have a lot of vegetables and I want to **use them up**.
+
+      
+
 **Murphy p. 298 ex. 143.1 -> Answer p. 378**
 
 2. ~~go up to~~ -> went up to
@@ -1232,23 +1306,56 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 9. ~~made up~~ -> was made up of
 10. ~~set up~~ -> set it up / fix it up
 
-### My -> Not checked
+### UP 2
 
-1. Jack  went up to the fir tree and found a gift in last year. Jack hopes it will be the same in this year.
-2. Nick caught up with Jack when they ran.
-3. Jack wasn't able to keep up with Nick, because he used up his energy and he felt pain in his knee.
-4. Jack sets up his business, he will sell fir trees.
-5. Jack takes up swimming, he became disillusioned with the running.
-6. Nick fixed up his bike, he's going to travel on it.
-7. Jack grew up in Saint-Petersburg.
-8. Jack was brought up by his grandmother, because his parents wasn't able to be with him.
-9. Jack always helped his grandmother and cleaned up his room.
-10. Nick is washing up his clothes, it was getting dirty after biking.
-11. Nick ended it up and went to the party.
-12. Jack gave up running, because he injured his knee and doctor recommended him to stop with running.
-13. Sport makes up important part of Jack's life.
-14. Jack takes up a lot of time on sport.
-15. Nick was on a party, but Jack didn't turn up.
+- bring up -  заводить разговор
+  - bring up an idea
+- come up - придумывать
+
+- come up with - придумывать
+  - invent -> we should come up with new idea
+- make up - выдумывать
+  - fabricate - tel what is not try
+- blow up - explode - взрывать
+- hold up - delay
+- look up to - respect
+- look up - search, browsing
+- to do up
+  - fix, repair
+  - to do fast
+  - завязывать шнурки
+- tear up 
+  - cry
+  - split, separate
+- clear up
+  - clear this mess
+  - become bright (for weather)
+- cheer up - be happier
+- save up
+  - reserve, keep up
+- push to the wall
+  - make smb very angry and she blows up
+- beat up
+  - win
+  - used physical strength
+
+**Murphy p. 300 ex. 144.3 -> Answer p. 378**
+
+2. ~~was blown up~~ -> blew up
+3. beaten up
+4. ~~teared up~~ -> split up/broke up
+5. do up my shoelaces
+6. clears up (will clear up)
+7. mixed up
+
+**Murphy p. 300 ex. 144.4 -> Answer p. 378**
+
+2. look it up
+3. put up with
+4. made it up
+5. ~~brought up~~ -> come up with
+6. ~~clear it up~~ -> tear it up
+7. ~~saving up~~ -> saving up for
 
 
 
@@ -1388,47 +1495,29 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 
 
 
+**Murphy p. 300 ex. 144.3 -> Answer p. 378**
 
+2. ~~was blown up~~ -> blew up
+3. beaten up
+4. ~~teared up~~ -> split up/broke up
+5. do up my shoelaces
+6. clears up (will clear up)
+7. mixed up
 
-## CURRENT
+**Murphy p. 300 ex. 144.4 -> Answer p. 378**
 
-1. **Go up / come up / walk up (to ...)** - Подходить
-   - A man **came up to** me in the street and asked me for money.
-2. **Catch up** (**with** somebody) - Догонять
-   - I’m not ready to go yet. You go on and I'll **catch up with** you / I'll **catch you up**
-3. **Keep up** (**with** somebody) - Продолжать
-   - You're walking too fast. I can't **keep up** (**with** you).
-4. **Set up** - Начинать
-   - The government has **set up** a committee to investigate the problem.
-5. **Take up** - Начинать что-то делать (часто о хобби)
-   - Laura **took up** photography a few years ago. She takes really good pictures.
-6. **Fix up**
-   - We've **fixed up** a meeting for next Monday.
-7. **Grow up**
-   - Ann was born in Hong Kong but **grew up** in Australia.
-8. **Bring up**
-   - Her parents died when she was a child and she was **brought up** by her grandparents.
-9. **Clean up / clear up / tidy up**
-   - Look at this mess! Who's going to **tidy up**?
-10. **Wash up**
-    - I hate **washing up**.
-11. **End up** - дело закончилось
-    - There was a fight in the street and three men **ended up** in hospital.
-12. **Give up**
-    - Don't **give up**. Keep trying!
-13. **Make up**
-    - Air is **made up** mainly of nitrogen and oxygen
-14. **Take up**
-    - Most of the space in the room was **taken up** by a large table.
-15. **Turn up / show up**
-    - We arranged to meet David last night, but he didn't turn up
-16. **Use** something **up** = use all of it so that nothing is left
-    - I'm going to make some soup. We have a lot of vegetables and I want to **use them up**.
+2. look it up
+3. put up with
+4. made it up
+5. ~~brought up~~ -> come up with
+6. ~~clear it up~~ -> tear it up
+7. ~~saving up~~ -> saving up for
 
 
 
 # Pronunciation
 
+- Camera
 - Address - [Address]
 - Get over -> not аве -> ове TODO
 - Lamborghini - [Ламборгини] - если после "g" стоит "h", то оно читается как "Г".
