--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -434,6 +434,7 @@ Must
 - Over to you - Вам слово
 - Go for it - Действуй, дерзай
 - What is that? - Что это
+- Could you spell your surname, please?
 
 ## Greeting
 
@@ -1472,6 +1473,50 @@ set off the journey
    - So..
 
 # !!!-----------CURRENT-----------!!!
+
+resemble
+
+take on
+
+employ
+
+take care of - look after
+
+dismantle - take apart
+
+take in - understand
+
+take up - start doing something
+
+take away 
+
+took off - become successful
+
+go under - bunkcrupt
+
+get away 
+
+get out (didn't do activity)
+
+desperate
+
+put you through - connect you someone
+
+licence
+
+Adress - удаление
+
+yes it with provided that you have
+
+larialce
+
+hw 44. 45
+
+
+
+
+
+
 
 - [Business Writing](https://docs.google.com/document/d/1OFjecIys_sL1DQUC_AFz3fsprPJgMXeGR-cSGEuu_bk/edit#heading=h.yhh37lsu26kw)
 - [Phrasal Verbs](https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/edit)
