--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -1474,47 +1474,142 @@ set off the journey
 
 # !!!-----------CURRENT-----------!!!
 
-resemble
+````
+Residence in the country 
+for three days 
+Socialized with friends 
+housework home remodeling projects 
+renovating 
+lettuce 
+leftovers 
+sauna 
+charades 
+Eat drink be merry 
+New Years Eve 
+Atmosphere felt more like a holiday 
+fireworks 
+Goals initiatives 
+different 
+Due date 
+pin point 
+Mid March 
+twins run in your family 
+Has anybody else in your family 
+identical 
+Because fraternal, or dizygotic, twins are 2 separate fertilized eggs, they usually develop 2 separate amniotic sacs, placentas, and supporting structures. Identical, or monozygotic, twins may or may not share the same amniotic sac, depending on how early the single fertilized egg divides into 2.
 
-take on
+If twins are a boy and a girl, clearly they are fraternal twins, as they do not have the same DNA. A boy has XY chromosomes and a girl has XX chromosomes. Girl-boy twins occur when one X egg is fertilized with an X sperm, and a Y sperm fertilizes the other X egg. 
+3 children 
+Double trouble 
 
-employ
+birth 
+Gloomy weather 
+tired 
+subtitles 
+show them in the cinema
 
-take care of - look after
+Turmoil and chaos 
+2 terms 
 
-dismantle - take apart
-
-take in - understand
-
-take up - start doing something
-
-take away 
-
-took off - become successful
-
-go under - bunkcrupt
-
-get away 
-
-get out (didn't do activity)
-
-desperate
-
-put you through - connect you someone
-
-licence
-
-Adress - удаление
-
-yes it with provided that you have
-
-larialce
-
-hw 44. 45
+Analysys - stress
+````
 
 
 
 
+
+Data 0r data or Date
+
+- Subtitles
+- Commitment -> обязательство
+- relax - take easy - spend time with my family
+- 2020 exciting year -> new Election of Tram
+  - Realocted
+  - 170 people
+  - November
+  - Killing people
+  - term - presidentional term
+- Internation
+  - consirning
+  - evolving
+
+
+
+**My speech**
+
+- House
+
+- Sauna
+
+- blow up USA
+
+- first week of Jule
+
+- identical twince
+
+- non-identical twince
+
+- marternual
+
+- 2 months and 3 years
+
+  
+
+**Family**
+
+- Ten people
+
+- What did you do
+
+- A lot of meals
+
+- Family dinner
+
+- President speech
+
+- Fireworks
+
+- Out side from Saint-Petersburg
+
+  
+
+
+
+HW 44
+
+HW 45
+
+1. C
+
+2. H
+
+3. A
+
+4. N
+
+5. K
+
+6. B
+
+7. O
+
+8. D
+
+9. F
+
+10. M
+
+11. G
+
+12. J
+
+13. G
+
+14. I
+
+15. L
+
+    
 
 
 
@@ -1679,6 +1774,14 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 - Pet dander is composed of tiny, even microscopic, flecks of skin shed by cats, dogs, rodents, birds and other animals with fur or feathers.
 
   
+
+## 14/12/2019
+
+- 
+
+
+
+
 
 ## **05/12/2019**
 
