--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -1745,6 +1745,22 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 
 # JOURNAL
 
+## 23/12/2020 - Current
+
+- Voluntary dismissal
+- resignation 
+- I resigned. 
+- I am resigning from LT. 
+- I gave two weeks notice. 
+- I officially gave my notice today. 
+- MIA - missing in action
+- coincidence
+
+In the beginning of the story I thought the characters would fall in love. 
+At the beginning of the story I thought the characters would fall in love. 
+
+
+
 ## Karin - 17/12/19
 
 - How many floors?
@@ -1778,8 +1794,6 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 ## 14/12/2019
 
 - 
-
-
 
 
 
