--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -435,12 +435,14 @@ Must
 - Go for it - Действуй, дерзай
 - What is that? - Что это
 - Could you spell your surname, please?
+- I hopeful we should be done in 5 days time.
 
 ## Greeting
 
 - Hello [name], How are you?
 - Hi, [name]. How are you getting on?
 - Hello, How are you doing?
+- How have you been?
 
 ## Weather
 
@@ -537,6 +539,7 @@ Must
 
 - She has gone (Oна ушла)
 - The time flies so much
+-  I'm giving till the end of the month to reach our goal!
 
 ## Dog
 
@@ -1315,8 +1318,10 @@ I was talking to James this morning and I FOUND OUT why he didn't come to the pa
 
 - come up with - придумывать
   - invent -> we should come up with new idea
-- make up - выдумывать
-  - fabricate - tel what is not try
+- make up - выдумывать 
+  - fabricate - tell what is not true - более плохое значение
+  - fabricate story (tell what is not true) or make up story
+  - come up - Imagine
 - blow up - explode - взрывать
 - hold up - delay
 - look up to - respect
@@ -1473,6 +1478,12 @@ set off the journey
    - So..
 
 # !!!-----------CURRENT-----------!!!
+
+
+
+
+
+
 
 ````
 Residence in the country 
@@ -1705,6 +1716,16 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 
 
 
+# Philosophy
+
+- selling yourself - business. Everybody should be able selling yourself. It's nature of business.
+- if you are not being sharing you don't know strong you or not
+- time - my life - I choose that you will be part of my life
+- my suit doesn't determine my pocket
+- Instagram - it's only tool for involve and get money
+
+
+
 
 # ARCHIVE of Phrases
 
@@ -1744,6 +1765,20 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
   
 
 # JOURNAL
+
+## 26/01/2020
+
+**H/W - Create some difficult sentences**
+
+- When John came home, his parents had already gone to sleep.
+- I had been waiting my friend on the bus stop, but when he came we already were late on our train.
+- John: Have you ever been in Australia?
+  - Nick: No, never, but I heard that Alex was. Why are you asking?
+  - John: My boss said me that some customers from Australia asked about our product. Seems they want to work with us.
+  - Nick: Cool, it means that you are going to Australia?
+  - John: Might be, but discussing is in progress. Perhaps, Alex will go.
+
+
 
 ## 23/12/2020 - Current
 
