--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -1766,6 +1766,40 @@ https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/
 
 # JOURNAL
 
+## 02/02/2020
+
+- I just woke up, but I'm still felling sleepy
+- wind - how is it pronoun?
+- My eyes is moving  (roaming)
+- Try to get focus
+- electrician 
+- damagest
+- I suggest we have a lesson on Monday (Opinion)
+- I suggest the lesson will be on Monday (Guess)
+
+
+
+**3 sentences like form ex. 2.4**
+
+1. I know that John is football fan. You want to know how often he goes on the match.
+   - John, how often do you go on the football matches?
+2. I know that John doesn't like beef. You want to know what meat he likes.
+   - John, what kind of meat do you prefer?
+3. John's brother likes rollerblading. You want to know how often he rollerblades.
+   - John, how often does your brother rollerblade?
+
+**5 sentences like form ex. 2.5**
+
+1. He looks sleepy. I suggest he just woke up but he is feeling sleepy.
+2. We'll have a lesson on Monday. I promise.
+3. I am watching the serial "Friends". I recommend it for your learning English.
+4. I'll pay for this bill. I insist.
+5. I apologize for my behavior. It won't happen again.
+
+
+
+
+
 ## 26/01/2020
 
 **H/W - Create some difficult sentences**
